fixing alignment for search bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 ﻿input[type=text] {
-	width: 200px;
+	width: 400px;
 	-webkit-transition: width 0.4s ease-in-out; 
 	transition: width 0.4s ease-in-out; 
 } 
